--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "75d9fb19-7f6a-44cc-84b0-83aad3398b40",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "ce97cdaa-67eb-4402-95d9-a1d3bedc6df2",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "bc5536f4-83ad-4185-9497-f5a76b52cca5",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "c0854a2d-a3ff-4171-b40d-59ea5660332d",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "21fa89aa-ef5d-4c1a-be97-a1b04a20ad86",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "b701fbe4-9334-4511-9a6b-3e7efdb87288",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "7d0b5265-5168-42c4-95e2-d99e9a083b69",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
     "    plt.axis(\"off\")\n",
     "    plt.imshow(images[key].mean(0) / 255)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'logs/std_{key}.pdf')\n",
+    "    plt.savefig(f'logs/mean_{key}.pdf')\n",
     "    plt.show()\n",
     "    \n",
     "    display(f'{key} (Std)')\n",
