fixed image export

--- a/generate_perturbation.ipynb
+++ b/generate_perturbation.ipynb
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [02:23<00:00, 17.92s/it]\n"
+      "100%|██████████| 8/8 [02:21<00:00, 17.63s/it]\n"
      ]
     }
    ],
@@ -84,11 +84,9 @@
     "                for image_directory in glob(os.path.join(label_directory, \"*\")):\n",
     "                    image = helper.load_image(image_directory)\n",
     "                    image = fn(image)\n",
-    "                    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "                    image_name = image_directory.split(\"/\")[-1]\n",
     "                    image_save_dir = os.path.join(folder_dir, image_name)\n",
-    "                    if not cv2.imwrite(image_save_dir, image):\n",
-    "                        raise ValueError\n",
+    "                    helper.save_image(image, image_save_dir)\n",
     "        pbar.update()"
    ]
   }
